[gd_scene load_steps=3 format=3 uid="uid://c3vxru085k6u5"]

[ext_resource type="Script" uid="uid://cyl4vm6ecbxt3" path="res://scripts/card.gd" id="1_d81rb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yiag5"]
size = Vector2(168, 258)

[node name="Card" type="Area2D"]
script = ExtResource("1_d81rb")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_yiag5")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
